@@ -27,6 +27,7 @@
 ## Bugs
 ##
 
+- Fixed calculation of brain-attack if a given wordlist has the size zero
 - Fixed automated calculation of brain-session when not using all hashes in the hashlist
 - Fixed endianness and invalid separator character in outfile format for hash-mode 16801 (WPA-PMKID-PMK)
 - Fixed ignoring --brain-client-features configuration when brain-server has attack positions information from a previous run
